# agents-101-workshop

complete/: pyproject.toml
complete/agent_basics/: chat.py  fn_call.py  simple.py
scratch/: pyproject.toml
scratch/agent_basics/: raw.py
