[tool.poetry]
name = "agent_basics"
version = "0.1.0"
description = ""
authors = ["Noorain Panjwani <noorain.panjwani@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
simple = "agent_basics.simple:main"
fn-call = "agent_basics.fn_call:main"
chat = "agent_basics.chat:main"

[tool.poetry.dependencies]
python = "~3.10"
pyautogen = "^0.2.32"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
